# AI-Funding

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  manual_test.py  pyproject.toml  readme.md  requirements.txt
.env/: pyvenv.cfg
2_preprocessing/: merging.ipynb
3_ollama_model/: ai_draft_generator.ipynb.ipynb  langchain_version.ipynb  query_engine_llama3.2.ipynb
3_openai_embeddings_streamlit/: application_draft.docx  openai_streamlit_app.py
3_openai_model/: 0_reset_pinecone_index.ipynb  1_upload_csv_embeddings.ipynb  2_unified_query_pdf_csv_llm.ipynb  2_upload_pdf_chunks.ipynb  3_evaluation_test_queries.ipynb  3_unified_query_pdf_csv_llm.ipynb  application_draft.docx  embedding_uploader.ipynb  openai_chatbot_streamlit.py  openai_streamlit_app.py
4_streamlit_app/: ai_funding_app.py  ai_funding_app_final.py  app.py  app_backup.py  app_streamlit.py  app_test.py  clarifying_questions.py  config.py  database.py  document_generator.py  docx_generator.py  dynamic_search.py  enhanced_app_streamlit.py  expanded_dynamic_search.py  gpt_recommender.py  llama_streamlit.py  memory.py  new_streamlit_llama.py  question_manager.py  search_engine.py  streamlit_funding_app.py  styles.py  utils.py
Ollama_model/: embedding_uploader_bge_pinecone.ipynb  llm_prompt_llama_advanced.txt  llm_prompt_mistral.txt  mistral.ipynb  model.ipynb  query_engine_advanced_rag.ipynb  upload_embeddings.ipynb
app/: app_streamlit.py  config.py  rag_core.py  utils.py
data/: merged_funding_data.csv
engine/: chatbot_memory.py  funding_query.py
(+80 files in other folders)
