[project]
name = "ai-funding-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.10.0",
    "html2text>=2025.4.15",
    "jupyterlab>=4.5.3",
    "langchain>=1.2.7",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "notebook>=7.5.2",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "pinecone>=8.0.0",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "pymupdf>=1.26.7",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.1",
    "tiktoken>=0.12.0",
]
